_sass/_theme.scss
// Document Prep
* {
  margin: 0;
  padding: 0;
}

body {
  @supports (font-variation-settings: normal) {
    font-family: $font-var;
  }
  background: $LIGHTbgColour;
  color: $LIGHTtextColour;
  font-family: $font;
  margin: 0 auto;
  width: 100%;
  height: 100%;
  max-width: 100%;
  scroll-behavior: smooth;
}

// Typography
@media (max-width: 480px) {
  h1 { font-size: 28px !important; }
  h2 { font-size: 21px !important; }
  h3 { font-size: 19px !important; }
  .post { h3 { font-size: 14px !important; } }
  h4, h5, h6 { font-size: 16px !important; }
  .tagline, .tagline * { font-size: 40px !important; }
  b { font-weight: $font-bold !important; } // Keeps bold bold, no matter the scenario
}

p { margin: 1em 0; }
h1 {
  font-size: 48px;
  font-weight: $font-bold;
  line-height: 1.1;
}
h2 {
  font-size: 24px;
  line-height: 1.35;
}
h3 { font-size: 16px; }
ol, ul { margin: 1em 1em; }
.category_name { 
  font-size: 22px;
  line-height: 1.1;
  margin: .25em 0;
  margin-left: 0 !important;
}

a { color: $LIGHTlinkColour; }
a:hover {
  color: $LIGHTlinkHoverColour;
  transition: color 250ms ease-in-out;
}
ul a, ol a { text-decoration: none; }

// Code blocks
.highlight, code {
  @supports (font-variation-settings: normal) { font-family: $codeFont-var; }
  font-family: $codeFont;
  background: $LIGHTcodebgColour;
  color: $LIGHTcodeColour;
  padding: .5vh 1vh .5vh 1vh;
}
code { padding: .25vh .5vh .25vh .5vh; }

// Navigation
header {
  text-align: center;
  display: flex;
  justify-content: space-between;
  height: 100px;
  background: $accentColour;
  padding-left: 16px;
  * {
    cursor: default;
    font-size: 14px;
  }
  h1 {
    flex: 0 0 auto;
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    a {
      display: block;
      :hover { cursor: pointer; }
    }
    img { 
      display: block;
      border: none !important;
    }
  }
  a {
    color: $navColour;
    background: none;
    :hover {
      color: inherit;
      background: none;
    }
  }
}

nav {
  ul {
    flex: 0 0 auto;
    text-align: left;
    display: flex;
    margin-top: 2.5em;
    li {
      list-style: none;
      margin: 0;
      padding: 0;
      display: flex;
      flex-direction: column;
      justify-content: center;
      :first-child { margin-left: 0; }
      a {
        cursor: pointer;
        padding: 0 0.8em;
        font-size: 1.1em;
        text-decoration: none;
        color: $navColour;
      }
      a:hover {
        text-decoration: underline;
        transition: text-decoration 150ms ease-in-out;
      }
      :last-child { a { padding-right: 0; } }
    }
  }
}

// Header
.header {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
  background: $accentColour;
  color: $headerTextColour;
  padding: 1.5em 32px;
  max-height: 30vh;

  p, b {
    flex: 0 0 auto;
    margin: auto 16px;
    display: flex;
    justify-content: center;

    font-size: 80px;
    letter-spacing: -.05em;
    font-weight: $font-regular;
    line-height: 1.1;
    white-space: nowrap;
  }
}

// Footer
footer {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
  text-align: center;
  p {
    font-size: .75em; 
    a {
      color: $LIGHTlinkColour;
      @media(prefers-color-scheme: dark) { color: $DARKlinkColour; }
      text-decoration: underline;
    }
  }
}

.end {
  margin-left: 25%;
  width: 50vw;
  border: 0;
  height: 1px;
  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 255, 255, 0.75), rgba(0, 0, 0, 0));
}

// Main Content
.container {
  width: 50vw;
  @media(max-width: 992px) {
    width: 90vw;
  }
  margin: 1em auto;
  img {
    @media(max-width: 480px) { width: 300px; }
    @media(max-width: 992px) { width: 80vw; }
    width: 50vw;
  }
  ul, ol {
    margin-left: 2em;
    margin-right: 24px !important;
  }
  @media(prefers-color-scheme: dark) {
    a { color: $DARKlinkColour; }
    a:hover, ul a:hover, ol a:hover, p a:hover {
      color: $DARKlinkHoverColour;
      transition: color 250ms ease-in-out;
    }
  }
  .highlight, p, hr {
    margin-left: 1em;
    margin-right: 24px;
  }
  @media (max-width: 480px) {
    max-width: calc(100vw - 1em);
    margin: 1em 1em 1em 1em;
    width: auto;
  }
  hr { margin-bottom: 1em; }
}

// Images
img {
  border: $borderSize $borderType $LIGHTborderColour;
  :before {
    display: none;
    content: '';
  } // Hack from https://stackoverflow.com/a/980948
}

// Blog Posts
.post {
  h3 { font-size: 14px !important; }
  a { text-decoration: underline; }
}

// Auto Dark Theme as Declared by Browser/OS
@media (prefers-color-scheme: dark) {
  .highlight {
    background: $DARKcodebgColour;
    color: $DARKcodeColour;
  }
  body {
    background: $DARKbgColour;
    color: $DARKtextColour;
  }
  img { border: $borderSize $borderType $DARKborderColour; }
  .highlight {
    background: $DARKcodebgColour;
    color: $DARKcodeColour;
  }
}

// Make pixel trackers invisible
.pxl {
  width: 1px;
  height: 1px;
  border: none;
}

// Table Formatting
table {
  display: block;
  overflow: auto;
  height: 200px;
  border-collapse: collapse;
  table-layout: fixed;
  padding: .5em .5em;
  margin: 0 auto;
  width: 100%;
  @media(max-width: 480px) { width: 300px; }
  thead {
    background: #353230;
    color: #fff;
    @media(prefers-color-scheme: dark) {
      background: #d3d3d3;
      color: #000;
    }
  }
  th { @media(min-width: 481px) { padding: .25em 2em; } }
  th, td { padding: .5em .5em; }
  tbody {
    td {
      @media(prefers-color-scheme: light) { border: 1px solid #000; }
      border: 1px solid #fff;
    }
  }
}

// Footnotes
.footnote { text-decoration: none !important; }
.footnotes {
  border-top: 1px solid #000;
  font-size: 12px;
  @media(prefers-color-scheme: dark) { border-top: 1px solid #fff; }
}

// Definition lists
dt { font-weight: $font-bold; }
dd { margin: .25em 1em; }

// Checklists
.task-list {
  list-style-type: none;
  margin-left: 1em !important;
}
.task-list-item-checkbox { margin-right: .5em; }

